--- a/EJ02/EJ02.csproj
+++ b/EJ02/EJ02.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cuenta.cs" />
+    <Compile Include="Cuentas.cs" />
+    <Compile Include="Facade.cs" />
     <Compile Include="Moneda.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
