test fecha creo que están todos. Correción de nombres

--- a/EJ06.Test/EJ06.Test.csproj
+++ b/EJ06.Test/EJ06.Test.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FechaAritmeticaTest.cs" />
     <Compile Include="FechaComparacionTest.cs" />
+    <Compile Include="FechaExceptionsTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EJ06\EJ06.csproj">
